--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.4.0",
     "framer-motion": "^6.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
     "swiper": "^8.0.7",
