--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
+    "rss-parser": "^3.13.0",
     "swiper": "^8.0.7",
+    "timers-browserify": "^2.0.12",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
